tests/lang/obr/types/fail/array-length-not-const.obr
MODULE Arrays;
    TYPE X = ARRAY 10 + 10 OF INTEGER;
    (* todo: this will start passing when consteval gets smarter *)
END Arrays.
